<resources>
    <string name="app_name">HARMAN FoosTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="harman">HARMAN</string>
    <string name="foos_tracker">FOOS TRACKER</string>
    <string name="start_game">START GAME</string>
    <string name="_0000">0000</string>
    <string name="total_games">TOTAL GAMES:</string>
    <string name="total_goals">TOTAL GOALS:</string>
    <string name="jersey_number">Jersey Number</string>
    <string name="player_name">Player Name</string>
    <string name="handedness">Handedness</string>
    <string name="height_in">Height (in)</string>
    <string name="player_biography">Player Biography</string>
    <string name="submit">SUBMIT</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="leaderboards">LEADERBOARDS</string>
    <string name="player_stats">PLAYER STATS</string>
    <string name="global_stats">GLOBAL STATS</string>
    <string-array name="handedness_array">
        <item>RIGHT</item>
        <item>LEFT</item>
    </string-array>

    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="blue_team">BLUE TEAM</string>
    <string name="kick_off">KICK OFF!</string>
    <string name="player_1">PLAYER 1</string>
    <string name="player_2">PLAYER 2</string>
    <string name="red_team">RED TEAM</string>
    <string name="blue_team_wins">BLUE TEAM WINS!</string>
    <string name="_00">00</string>
    <string name="sample_name">sample name</string>
    <string name="hold_button_to_subtract_score">Hold button to subtract score.</string>
    <string name="offensive_ngoal">OFFENSIVE\nGOAL</string>
    <string name="defensive_ngoal">DEFENSIVE\nGOAL</string>
    <string name="end_game">END GAME</string>
    <string name="own_ngoal">OWN\nGOAL</string>
    <string name="slap_nback">SLAP\nBACK</string>
    <string name="biography">Biography</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="hometown">Hometown</string>
    <string name="player_photo">Player Photo</string>
    <string name="tap_to_take_photo">Tap to take photo.</string>
    <string name="player_profile_pic">Player Profile Pic</string>
    <string name="confirm_player_pin">Confirm Player Pin</string>
    <string name="player_pin">Player Pin</string>
</resources>
