<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/startGameFragment">

    <TextView
        android:id="@+id/textView_totalGamesNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_totalGamesLabel"
        android:layout_alignBottom="@+id/textView_totalGamesLabel"
        android:layout_alignEnd="@+id/textView_har"
        android:text="@string/_0000"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_har"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_title"
        android:layout_centerHorizontal="true"
        android:text="@string/harman"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/harmanLogo"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_startGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/foos_tracker"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="40sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="#ffffff"
        android:text="@string/start_game" />

    <TextView
        android:id="@+id/textView_totalGoalsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_totalGamesLabel"
        android:layout_below="@+id/textView_totalGamesLabel"
        android:text="@string/total_goals"
        android:textColor="@android:color/background_light"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_totalGamesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_title"
        android:layout_below="@+id/button_startGame"
        android:layout_marginTop="47dp"
        android:text="@string/total_games"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_totalGoalsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_totalGamesNumber"
        android:layout_below="@+id/textView_totalGamesNumber"
        android:text="@string/_0000"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="25sp" />
</RelativeLayout>
